@@ -1,3 +1,4 @@
+* Reset display_size of TreeView when group is cleared or changed
 * Allow relation field to be selected in CSV export
 * Hide empty cell on small screen
 * Support validate attribute of wizard's Button
